--- a/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
+++ b/VY_TRUONG_NAM/CuaHangVang/complete/src/main/resources/templates/goldshop.html
@@ -221,16 +221,16 @@
 
     <script>
         const products = {
-    'SP001': { name: 'Nhẫn Vàng 24K', price: 5000000, image: 'images/nhan-vang-24k.jpg' },
-    'SP002': { name: 'Dây Chuyền Vàng Ý', price: 7500000, image: 'images/day-chuyen-vang-y.jpg' },
-    'SP003': { name: 'Bông Tai Vàng Trắng', price: 3200000, image: 'images/bong-tai-vang-trang.jpg' },
-    'SP004': { name: 'Lắc Tay Vàng 18K', price: 6800000, image: 'images/lac-tay-vang-18k.jpg' },
-    'SP005': { name: 'Nhẫn Kim Cương PNJ', price: 15000000, image: 'images/nhan-kim-cuong.jpg' },
-    'SP006': { name: 'Vòng Cổ Kim Cương 18K', price: 25000000, image: 'images/vong-co-kim-cuong.jpg' },
-    'SP007': { name: 'Lắc Chân Vàng Hồng', price: 4500000, image: 'images/lac-chan-vang-hong.jpg' },
-    'SP008': { name: 'Nhẫn Vàng Ý 14K', price: 4200000, image: 'images/nhan-vang-y-14k.jpg' },
-    'SP009': { name: 'Vòng Tay Vàng Hoa Văn', price: 8800000, image: 'images/vong-tay-hoa-van.jpg' },
-    'SP010': { name: 'Vòng Kiềng', price: 8800000, image: 'images/vong-kieng.jpg' }
+    'SP001': { name: 'Nhẫn Vàng 24K', price: 7000000, image: 'https://cdn.pnj.io/images/detailed/137/gn0000y001955-nhan-vang-24k-pnj-1.png' },
+    'SP002': { name: 'Dây Chuyền Vàng Ý', price: 7500000, image: 'https://cdn.pnj.io/images/detailed/126/gd0000c060140-day-chuyen-vang-y-18k-pnj.png' },
+    'SP003': { name: 'Bông Tai Vàng Trắng', price: 3200000, image: 'https://cdn.pnj.io/images/detailed/142/GB0000W001521-Bong-tai-Vang-Trang-Y-18K-PNJ-1.png' },
+    'SP004': { name: 'Lắc Tay Vàng 18K', price: 6800000, image: 'https://cdn.pnj.io/images/detailed/94/gl0000y060131-lac-tay-vang-y-18k-pnj.png' },
+    'SP005': { name: 'Nhẫn Kim Cương PNJ', price: 15000000, image: 'https://cdn.pnj.io/images/detailed/116/gnddddw006296-nhan-kim-cuong-vang-trang-14k-pnj.png' },
+    'SP006': { name: 'Vòng Cổ Kim Cương 18K', price: 25000000, image: 'https://cdn.pnj.io/images/thumbnails/300/300/detailed/254/sp-gcddddw000934-day-co-kim-cuong-vang-trang-14k-pnj-timeless-diamond-100.png' },
+    'SP007': { name: 'Lắc Chân Vàng Hồng', price: 4500000, image: 'https://cdn-media.glamira.com/media/product/newgeneration/view/1/sku/drobin1/diamond/diamond-Brillant_AAA/alloycolour/red.jpg' },
+    'SP008': { name: 'Nhẫn Vàng Ý 14K', price: 4200000, image: 'https://cdn.pnj.io/images/detailed/228/sp-gn0000y060832-nhan-vang-y-14k-pnj-1.png' },
+    'SP009': { name: 'Vòng Tay Vàng Hoa Văn', price: 8800000, image: 'https://cdn.pnj.io/images/thumbnails/300/300/detailed/238/sp-gv0000w060440-vong-tay-vang-trang-y-18k-pnj-1.png' },
+    'SP010': { name: 'Vòng Kiềng', price: 8800000, image: 'https://cdn.pnj.io/images/thumbnails/300/300/detailed/215/sp-gh0000y060105-kieng-cuoi-vang-24k-pnj-1.png' }
 };
 
 
